fix(ui): Shift radius scale

--- a/packages/ui/src/components/bundle-assets/bundle-assets.module.css
+++ b/packages/ui/src/components/bundle-assets/bundle-assets.module.css
@@ -31,7 +31,7 @@
 }
 
 .flag {
-  border-radius: 2px;
+  border-radius: var(--radius-small);
   display: inline-block;
   width: var(--space-xsmall);
   height: var(--space-xsmall);
